// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic select 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for a disabled select 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11[disabled] + .c9 {
  fill: #8d8d8d;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      disabled=""
      id="weather"
      type="text"
    >
      <option
        disabled=""
        value="sunny"
      >
        Sunny
      </option>
      <option
        disabled=""
        value="windy"
      >
        Windy
      </option>
      <option
        disabled=""
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for a full width select 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c4 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c3 {
  margin-bottom: 0 !important;
}

.c0 {
  width: 100%;
}

<div
  class="c0 c1"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <label
      class="c3 c4 c5 c1"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c6 c7"
    style="width: 100%;"
    width="100%"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c10 c11"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for a required field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11[disabled] + .c9 {
  fill: #8d8d8d;
}

.c12[disabled] + .c9 {
  fill: #8d8d8d;
}

.c12 + .c9 {
  width: 15px;
  height: 15px;
}

.c13[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13 + .c9 {
  width: 25px;
  height: 25px;
}

.c14[disabled] + .c9 {
  fill: #8d8d8d;
}

.c14 + .c9 {
  width: 30px;
  height: 30px;
}

.c15[disabled] + .c9 {
  fill: #8d8d8d;
}

.c16[disabled] + .c9 {
  fill: #8d8d8d;
}

.c17[disabled] + .c9 {
  fill: #8d8d8d;
}

.c18[disabled] + .c9 {
  fill: #8d8d8d;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="true"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for a select with a default value 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c11[disabled] + .c9 {
  fill: #8d8d8d;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        selected=""
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for a select with a placeholder 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c11[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #8e9ca8;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        disabled=""
        selected=""
      >
        Select weather...
      </option>
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (after) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child):not(:last-child),
.c5 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-left-width: 0;
}

.c5 > *:first-child,
.c5 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5 > *:last-child,
.c5 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-left-width: 0;
  border-bottom-left-radius: 0;
}

.c5 > * {
  border-radius: 4px;
}

.c5 input:focus,
.c5 select:focus {
  z-index: 1;
  position: relative;
}

.c5 > *:first-child input,
.c5 > *:first-child select {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5 > *:last-child input,
.c5 > *:last-child select {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c5 > *:not(:first-child):not(:last-child) > input,
.c5 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13 + .c10 {
  width: 15px;
  height: 15px;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 25px;
  height: 25px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 30px;
  height: 30px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c18[disabled] + .c10 {
  fill: #8d8d8d;
}

.c19[disabled] + .c10 {
  fill: #8d8d8d;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c0"
    role="group"
  >
    <div
      class="c6 c7"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c8 c9"
        id="weather"
        type="text"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div>
      test
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (before) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:first-child):not(:last-child),
.c5 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-left-width: 0;
}

.c5 > *:first-child,
.c5 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5 > *:last-child,
.c5 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-left-width: 0;
  border-bottom-left-radius: 0;
}

.c5 > * {
  border-radius: 4px;
}

.c5 input:focus,
.c5 select:focus {
  z-index: 1;
  position: relative;
}

.c5 > *:first-child input,
.c5 > *:first-child select {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5 > *:last-child input,
.c5 > *:last-child select {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c5 > *:not(:first-child):not(:last-child) > input,
.c5 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13 + .c10 {
  width: 15px;
  height: 15px;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 25px;
  height: 25px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 30px;
  height: 30px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c18[disabled] + .c10 {
  fill: #8d8d8d;
}

.c19[disabled] + .c10 {
  fill: #8d8d8d;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c0"
    role="group"
  >
    <div>
      test
    </div>
    <div
      class="c6 c7"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c8 c9"
        id="weather"
        type="text"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (vertical) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7.c7.c7 {
  position: relative;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 > *:not(:first-child):not(:last-child),
.c5 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-top-width: 0;
}

.c5 > *:first-child,
.c5 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.c5 > *:last-child,
.c5 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-top-width: 0;
  border-top-right-radius: 0;
}

.c5 > * {
  border-radius: 4px;
}

.c5 input:focus,
.c5 select:focus {
  z-index: 1;
  position: relative;
}

.c5 > *:first-child input,
.c5 > *:first-child select {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.c5 > *:last-child input,
.c5 > *:last-child select {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c5 > *:not(:first-child):not(:last-child) > input,
.c5 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c11 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8[disabled] + .c10 {
  fill: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c12[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13[disabled] + .c10 {
  fill: #8d8d8d;
}

.c13 + .c10 {
  width: 15px;
  height: 15px;
}

.c14[disabled] + .c10 {
  fill: #8d8d8d;
}

.c14 + .c10 {
  width: 25px;
  height: 25px;
}

.c15[disabled] + .c10 {
  fill: #8d8d8d;
}

.c15 + .c10 {
  width: 30px;
  height: 30px;
}

.c16[disabled] + .c10 {
  fill: #8d8d8d;
}

.c17[disabled] + .c10 {
  fill: #8d8d8d;
}

.c18[disabled] + .c10 {
  fill: #8d8d8d;
}

.c19[disabled] + .c10 {
  fill: #8d8d8d;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c0"
    role="group"
  >
    <div>
      test
    </div>
    <div
      class="c6 c7"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="c8 c9"
        id="weather"
        type="text"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="c10 c11"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <path
          d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input field with a description 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c8.c8.c8 {
  position: relative;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c12 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c11 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c13[disabled] + .c11 {
  fill: #8d8d8d;
}

.c14[disabled] + .c11 {
  fill: #8d8d8d;
}

.c14 + .c11 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c11 {
  fill: #8d8d8d;
}

.c15 + .c11 {
  width: 25px;
  height: 25px;
}

.c16[disabled] + .c11 {
  fill: #8d8d8d;
}

.c16 + .c11 {
  width: 30px;
  height: 30px;
}

.c17[disabled] + .c11 {
  fill: #8d8d8d;
}

.c18[disabled] + .c11 {
  fill: #8d8d8d;
}

.c19[disabled] + .c11 {
  fill: #8d8d8d;
}

.c20[disabled] + .c11 {
  fill: #8d8d8d;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

abbr.c6 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c6 {
  font-style: italic;
}

kbd.c6 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c6 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c6 {
  font-weight: bold;
}

sub.c6,
sup.c6 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c6,
u.c6 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c6,
cite.c6,
var.c6,
em.c6 {
  font-style: italic;
}

kbd.c6,
pre.c6,
samp.c6 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c6 .c21 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c5 {
  display: block;
  font-size: 0.8rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <span
    class="c5 c6 c0"
  >
    Required for your fannypack
  </span>
  <div
    class="c7 c8"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c9 c10"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c11 c12"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input field with a hint 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c13[disabled] + .c9 {
  fill: #8d8d8d;
}

.c14[disabled] + .c9 {
  fill: #8d8d8d;
}

.c14 + .c9 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c9 {
  fill: #8d8d8d;
}

.c15 + .c9 {
  width: 25px;
  height: 25px;
}

.c16[disabled] + .c9 {
  fill: #8d8d8d;
}

.c16 + .c9 {
  width: 30px;
  height: 30px;
}

.c17[disabled] + .c9 {
  fill: #8d8d8d;
}

.c18[disabled] + .c9 {
  fill: #8d8d8d;
}

.c19[disabled] + .c9 {
  fill: #8d8d8d;
}

.c20[disabled] + .c9 {
  fill: #8d8d8d;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

abbr.c12 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c12 {
  font-style: italic;
}

kbd.c12 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c12 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c12 {
  font-weight: bold;
}

sub.c12,
sup.c12 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c12,
u.c12 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c12,
cite.c12,
var.c12,
em.c12 {
  font-style: italic;
}

kbd.c12,
pre.c12,
samp.c12 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c12 .c21 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c11 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <span
    class="c11 c12 c0"
  >
    Must be awesome
  </span>
</div>
`;

exports[`renders correctly for an optional input field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c8.c8.c8 {
  position: relative;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c12 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c9[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9[disabled] + .c11 {
  fill: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c13[disabled] + .c11 {
  fill: #8d8d8d;
}

.c14[disabled] + .c11 {
  fill: #8d8d8d;
}

.c14 + .c11 {
  width: 15px;
  height: 15px;
}

.c15[disabled] + .c11 {
  fill: #8d8d8d;
}

.c15 + .c11 {
  width: 25px;
  height: 25px;
}

.c16[disabled] + .c11 {
  fill: #8d8d8d;
}

.c16 + .c11 {
  width: 30px;
  height: 30px;
}

.c17[disabled] + .c11 {
  fill: #8d8d8d;
}

.c18[disabled] + .c11 {
  fill: #8d8d8d;
}

.c19[disabled] + .c11 {
  fill: #8d8d8d;
}

.c20[disabled] + .c11 {
  fill: #8d8d8d;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

abbr.c6 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c6 {
  font-style: italic;
}

kbd.c6 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c6 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c6 {
  font-weight: bold;
}

sub.c6,
sup.c6 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c6,
u.c6 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c6,
cite.c6,
var.c6,
em.c6 {
  font-style: italic;
}

kbd.c6,
pre.c6,
samp.c6 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c6 .c21 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c5 {
  font-size: 0.8rem;
  color: #708da8;
  margin-left: 0.5rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
    <span
      class="c5 c6 c0"
    >
      OPTIONAL
    </span>
  </div>
  <div />
  <div
    class="c7 c8"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c9 c10"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c11 c12"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for a select with size large 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c11[disabled] + .c9 {
  fill: #8d8d8d;
}

.c12[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13 + .c9 {
  width: 15px;
  height: 15px;
}

.c14[disabled] + .c9 {
  fill: #8d8d8d;
}

.c14 + .c9 {
  width: 25px;
  height: 25px;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7 {
  font-size: 1.5rem;
}

.c7 + .c9 {
  width: 30px;
  height: 30px;
}

.c7 + .c15 {
  width: 25px;
  height: 25px;
  top: 16px;
  right: 12px;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for a select with size medium 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c11[disabled] + .c9 {
  fill: #8d8d8d;
}

.c12[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13 + .c9 {
  width: 15px;
  height: 15px;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7 {
  font-size: 1.25rem;
}

.c7 + .c9 {
  width: 25px;
  height: 25px;
}

.c7 + .c14 {
  width: 20px;
  height: 20px;
  top: 15px;
  right: 10px;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for a select with size small 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c11[disabled] + .c9 {
  fill: #8d8d8d;
}

.c12[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7 {
  font-size: 0.8rem;
}

.c7 + .c9 {
  width: 15px;
  height: 15px;
}

.c7 + .c13 {
  width: 10px;
  height: 10px;
  top: 10px;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`states renders correctly for a select with state danger 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c11[disabled] + .c9 {
  fill: #8d8d8d;
}

.c12[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13 + .c9 {
  width: 15px;
  height: 15px;
}

.c14[disabled] + .c9 {
  fill: #8d8d8d;
}

.c14 + .c9 {
  width: 25px;
  height: 25px;
}

.c15[disabled] + .c9 {
  fill: #8d8d8d;
}

.c15 + .c9 {
  width: 30px;
  height: 30px;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7 {
  border-color: #c9444d;
  box-shadow: #c9444d 0px 0px 0px 1px !important;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="true"
      aria-required="false"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`states renders correctly for a select with state primary 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c11[disabled] + .c9 {
  fill: #8d8d8d;
}

.c12[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13 + .c9 {
  width: 15px;
  height: 15px;
}

.c14[disabled] + .c9 {
  fill: #8d8d8d;
}

.c14 + .c9 {
  width: 25px;
  height: 25px;
}

.c15[disabled] + .c9 {
  fill: #8d8d8d;
}

.c15 + .c9 {
  width: 30px;
  height: 30px;
}

.c16[disabled] + .c9 {
  fill: #8d8d8d;
}

.c17[disabled] + .c9 {
  fill: #8d8d8d;
}

.c18[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`states renders correctly for a select with state success 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c11[disabled] + .c9 {
  fill: #8d8d8d;
}

.c12[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13 + .c9 {
  width: 15px;
  height: 15px;
}

.c14[disabled] + .c9 {
  fill: #8d8d8d;
}

.c14 + .c9 {
  width: 25px;
  height: 25px;
}

.c15[disabled] + .c9 {
  fill: #8d8d8d;
}

.c15 + .c9 {
  width: 30px;
  height: 30px;
}

.c16[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7 {
  border-color: #2c8453;
  box-shadow: #2c8453 0px 0px 0px 1px !important;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;

exports[`states renders correctly for a select with state warning 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6.c6.c6 {
  position: relative;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c10 {
  position: absolute;
  width: 20px;
  height: 20px;
  right: 2px;
  z-index: 1;
  fill: #435a6f;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
}

.c11[disabled] + .c9 {
  fill: #8d8d8d;
}

.c12[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13[disabled] + .c9 {
  fill: #8d8d8d;
}

.c13 + .c9 {
  width: 15px;
  height: 15px;
}

.c14[disabled] + .c9 {
  fill: #8d8d8d;
}

.c14 + .c9 {
  width: 25px;
  height: 25px;
}

.c15[disabled] + .c9 {
  fill: #8d8d8d;
}

.c15 + .c9 {
  width: 30px;
  height: 30px;
}

.c16[disabled] + .c9 {
  fill: #8d8d8d;
}

.c17[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #bdbdbd;
  border-radius: 0.2em;
  color: #435a6f;
  height: 2.5em;
  padding: 0.4em 1.4em 0.4em 0.6em;
  line-height: 1.5;
  width: 100%;
}

.c7[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7[disabled] + .c9 {
  fill: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7 {
  border-color: #f2a100;
  box-shadow: #f2a100 0px 0px 0px 1px !important;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="weather"
    >
      Weather
    </label>
  </div>
  <div />
  <div
    class="c5 c6"
  >
    <select
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="weather"
      type="text"
    >
      <option
        value="sunny"
      >
        Sunny
      </option>
      <option
        value="windy"
      >
        Windy
      </option>
      <option
        value="overcast"
      >
        Overcast
      </option>
    </select>
    <svg
      aria-hidden="true"
      class="c9 c10"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <path
        d="M13 8l-3-3-3 3h6zm-.1 4L10 14.9 7.1 12h5.8z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div />
</div>
`;
